# UpSet2D

./: README.md  pyproject.toml
examples/: Basic Usage.ipynb
upset2d/: __init__.py  _plot_hypergraph.py
